app/res/navBar.css
@import "tailwindcss";
/* Nav itself */
nav {
  overflow: hidden;
  position: -webkit-sticky; /* Safari */
  position: sticky;
  width: 100%;
  top: 0;
  margin-bottom: 1rem;
  padding: 0;
  border: 1px solid #666666;
  border-radius: 0.5rem;
  background-color: #333333;
  font-size: 1.25rem;
  transition: width 0.2s, margin 0.2s, border-radius 0.2s;
  -webkit-transition: width 0.2s, margin 0.2s, border-radius 0.2s;
}
nav.sticky {
  margin-left: calc(-1 * var(--border-lr));
  width: 100vw;
  border-top: 0;
  border-left: 0;
  border-right: 0;
  border-radius: 0;
  box-shadow: 0 8px 12px #242424;
  transition: width 0.2s, margin 0.2s, border-radius 0.2s;
  -webkit-transition: width 0.2s, margin 0.2s, border-radius 0.2s;
}

/* Single nav tags */
nav a
/*, nav .dropdown*/ {
  margin: 0;
  padding: 0.5rem 1rem;
  float: left;
  display: block;
  color: var(--link);
  text-decoration: none;
}
nav .dropdown {
  float: left;
  overflow: hidden;
  /* position: relative; */
}
nav a.active {
  background-color: var(--title);
  color: white;
}
nav a:hover,
nav .dropdown:hover .dropbtn {
  background-color: #444444;
}
nav a.icon {
  display: none;
}

/* Nav dropdown content */
nav .dropdown .dropdown-content {
  visibility: hidden;
  height: 0;
  /* display: none; */
  /* position: absolute; */
  /* overflow: visible; */
  /* background-color: #f9f9f9; */
  /* min-width: 160px; */
  /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
  z-index: 1000;
}
nav .dropdown .dropdown-content a {
  /* float: none; */
  display: block;
  /* overflow: visible; */
}
nav .dropdown:hover .dropdown-content {
  /* display: block; */
  visibility: visible;
  height: auto;
}

/* Responsive layout for smaller screens */
@media screen and (max-width: 800px) {
  /* Collapsed navigation menu */
  nav a:not(:first-child) {
    display: none;
  }
  nav a.active {
    float: left;
    display: block;
  }
  nav a.icon {
    float: right;
    display: block;
    border-left: 1px solid #666666;
  }

  /* Extended navigation menu */
  nav.responsive a.active {
    float: none;
    display: block;
  }
  nav.responsive a.icon {
    position: absolute;
    right: 0;
    top: 0;
    border-bottom: 1px solid #666666;
  }
  nav.responsive a {
    float: none;
    display: block;
  }
}

